Mais ajustes no front

--- a/src/app/alunos/alunos.component.html
+++ b/src/app/alunos/alunos.component.html
@@ -1,11 +1,11 @@
-<div class="card">
-    <div class="card-header" style="display: flex; justify-content: space-between;">
+<div class="card  custom-table">
+    <div class="card-header" style="display: flex; justify-content: space-between; color: white;">
         Alunos
 
         <a type="button" class="btn btn-success btn-sm" [routerLink]="['aluno']">Novo</a>
     </div>
     <div class="card-body">
-        <table class="table table-responsive table-bordered">
+        <table class="table table-responsive">
             <thead>
               <tr style="align-items: center; text-align: center; justify-content: center;">
                 <th scope="col">ID</th>
