--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,5 @@
 <app-navbar></app-navbar>
 
-<div class="container-fluid mt-4" style="height: 100vh;">
-    <div style="margin-top: 50px;">
-        <router-outlet></router-outlet>
-    </div>
-    <app-pag-inicial></app-pag-inicial>
+<div style="padding-top: 40px; min-height: 100vh;" class="container-fluid mt-4 pag">
+    <router-outlet></router-outlet>
 </div>
-<app-footer style="margin-top: 50px;"></app-footer>
