--- a/src/app/lista-treinos/lista-treinos.component.css
+++ b/src/app/lista-treinos/lista-treinos.component.css
@@ -2,4 +2,5 @@
     align-items: center;
     text-align: center;
     font-size: larger;
+    background: linear-gradient(135deg, #4e0666, #05581B) !important;
 }
