--- a/src/app/pag-inicial/pag-inicial.component.css
+++ b/src/app/pag-inicial/pag-inicial.component.css
@@ -1,6 +1,6 @@
 /* Fundo com gradiente e centralização do conteúdo */
 .container-fluid {
-  background: linear-gradient(135deg, #6a1b9a, #d32f2f); /* Gradiente roxo e vermelho */
+  background: linear-gradient(135deg, #4e0666, #05581B); /* Gradiente roxo e vermelho */
   color: white;
   min-height: 100vh; /* Garantir que ocupe toda a altura da tela */
   display: flex;
