--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -15,7 +15,10 @@
             <div class="offcanvas-body">
                 <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                     <li class="nav-item">
-                        <a class="nav-link active" role="button" aria-current="page" [routerLink]="['alunos']" data-bs-dismiss="offcanvas">Lista de Alunos</a>
+                        <a class="nav-link active" role="button" aria-current="page" [routerLink]="['inicio/alunos']" data-bs-dismiss="offcanvas">Lista de Alunos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" role="button" aria-current="page" href="https://linktr.ee/PowerGymAcademy">Fale Conosco</a>
                     </li>
                 </ul>
             </div>
