--- a/src/app/pag-inicial/pag-inicial.component.html
+++ b/src/app/pag-inicial/pag-inicial.component.html
@@ -1,10 +1,16 @@
-<div class="container-fluid p-5 d-flex flex-column justify-content-center align-items-center" style="padding-bottom: 50px;">
-    <h1 class="display-4 text-white mb-4">Sinta o poder para treinar</h1>
-  
-    <p class="lead text-white mb-5">Transforme seu corpo e mente com a melhor academia online. Treinos personalizados e apoio contínuo.</p>
-  
-    <div>
-      <button [routerLink]="['alunos']" class="btn btn-lg btn-primary">Comece Agora</button>
+<div class="container-fluid hero">
+  <div class="hero-content d-flex align-items-center justify-content-center">
+    <div class="hero-image">
+      <img src="logoPowerGym.webp" alt="Logo PowerGym" class="img-fluid">
+    </div>
+    <div class="hero-text ms-4">
+      <h1 class="display-4 text-white mb-4">Gerencie seus alunos com a PowerGym</h1>
+      <p class="lead text-white mb-5">
+        Transforme a gestão da sua academia com nosso sistema completo: cadastre alunos, personalize treinos e acompanhe o progresso de cada um com facilidade e eficiência.
+      </p>
+      <div>
+        <button [routerLink]="['alunos']" class="btn btn-lg btn-primary">Comece Agora</button>
+      </div>
     </div>
   </div>
-  
+</div>
