subido atualizacao do front

--- a/src/app/aluno/aluno.component.css
+++ b/src/app/aluno/aluno.component.css
@@ -1,10 +1,16 @@
 .card{
     background: linear-gradient(135deg, #4e0666, #05581B);
     border-color: white;
-    color: white;
+    color: black !important;
 }
 .card-header{
     font-size: larger;
     align-items: center;
     text-align: center;
+}
+.form-floating{
+    color: black !important;
+}
+.card-header{
+    color: white !important;
 }
