--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,3 +3,5 @@
 <div style="padding-top: 40px; min-height: 100vh;" class="container-fluid mt-4 pag">
     <router-outlet></router-outlet>
 </div>
+
+<app-footer></app-footer>
