--- a/src/app/aluno/aluno.component.html
+++ b/src/app/aluno/aluno.component.html
@@ -4,17 +4,18 @@
       <div class="card-body">
         <div class="container mt-4">
           <div class="row g-3">
-            <div class="col-md-6">
-              <div class="form-floating">
-                <input type="text" id="id" name="id" class="form-control" placeholder="Id" [(ngModel)]="aluno.id">
-                <label for="id">Id</label>
-              </div>
-            </div>
   
             <div class="col-md-6">
               <div class="form-floating">
                 <input type="text" id="nome" name="nome" class="form-control" placeholder="Digite o nome" [(ngModel)]="aluno.nome" required>
                 <label for="nome">Nome</label>
+              </div>
+            </div>
+
+            <div class="col-md-6">
+              <div class="form-floating">
+                <input type="number" id="idade" name="idade" class="form-control" placeholder="Informe sua Idade" [(ngModel)]="aluno.idade" required>
+                <label for="nome">Idade</label>
               </div>
             </div>
   
@@ -53,7 +54,7 @@
   
             <div class="col-md-6">
               <div class="form-floating">
-                <input type="tel" id="telefone" name="telefone" class="form-control" placeholder="(00) 00000-0000" [(ngModel)]="aluno.telefone">
+                <input type="tel" id="telefone" name="telefone" class="form-control" (ngModelChange)="formatarTelefone()" placeholder="(00) 00000-0000" [(ngModel)]="aluno.telefone">
                 <label for="telefone">Telefone</label>
               </div>
             </div>
