--- a/src/app/pag-inicial/pag-inicial.component.html
+++ b/src/app/pag-inicial/pag-inicial.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid hero">
   <div class="hero-content d-flex align-items-center justify-content-center">
     <div class="hero-image">
-      <img src="logoPowerGym.webp" alt="Logo PowerGym" class="img-fluid">
+      <img src="/assets/logoPowerGym.webp" alt="Logo PowerGym" class="img-fluid">
     </div>
     <div class="hero-text ms-4">
       <h1 class="display-4 text-white mb-4">Gerencie seus alunos com a PowerGym</h1>
